# InsightsAi-backend

./: .gitignore  README.md  main.py  mongodb_config.py  pyproject.toml  requirements.txt  run.py
modules/: __init__.py  database.py  document_processor.py  embedding_service.py  mongodb_config.py
tools/: init_mongodb.py  test_client.py
