[project]
name = "insigts_ai"
version = "0.1.0"
description = "backend server for insights AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.0",
    "uvicorn==0.23.2",
    "pydantic==2.4.2",
    "torch==2.1.0",
    "sentence-transformers==2.2.2",
    "pymongo==4.5.0",
    "numpy==1.24.3",
    "python-dotenv>=0.19.0",
    "python-multipart==0.0.6",
    "markdown==3.5",
    "beautifulsoup4==4.12.2",
    "scipy==1.11.3",
    "requests==2.31.0",
    "pinecone-client==2.2.4",
    "huggingface-hub==0.25.2",
    "pinecone>=6.0.2",
]
